# lazyslide-models

./: .pre-commit-config.yaml  README.md  pyproject.toml  references.bib
.github/workflows/: build_lazyslide_models.yaml  test_models.yml
scripts/export_models/: README.md  export_hest_tissue_seg.py  export_nulite.py  export_path2space.py  export_pathprofiler.py
src/lazyslide_models/: __init__.py  _model_registry.py  _repr.py  _utils.py  base.py
src/lazyslide_models/feature_prediction/: __init__.py  path2space.py
src/lazyslide_models/multimodal/: __init__.py  biomedclip.py  conch.py  medsiglip.py  musk.py  plip.py  prism.py  quiltnet.py  titan.py
src/lazyslide_models/segmentation/: cellpose.py  grandqc.py  hest.py  instanseg.py  pathprofiler.py  sam.py
src/lazyslide_models/segmentation/cellvit_family/: histoplus.py  nulite.py
src/lazyslide_models/segmentation/cellvit_family/blocks/: modules.py
src/lazyslide_models/tile_prediction/: focuslitenn.py  pathprofiler_qc.py  spider.py
src/lazyslide_models/vision/: __init__.py  chief.py  ctranspath.py  genbio_pathfm.py  gigapath.py  gpfm.py  h_optimus.py  hibou.py  lunit.py  madeleine.py  midnight.py  moozy.py  open_midnight.py  phikon.py  virchow.py
tests/: conftest.py  contracts.py  inputs.py  test_general.py  test_models.py
